Adding spinner when loading/refreshing page

--- a/FrontEnd/termi-project/src/index.css
+++ b/FrontEnd/termi-project/src/index.css
@@ -13,23 +13,28 @@ code {
 }
 
 
-
-.loader {
-  margin:auto;
+.spinner {
   display: flex;
+  justify-content: center;
   align-items: center;
-  
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  height: 100vh;
+  width: 100%;
+  background-color: #fff;
+}
+
+.spinner::before {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 50px;
+  border: 5px solid #ccc;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+  border-top-color: #333;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-
