--- a/FrontEnd/termi-project/src/pages/Register/RegisterPage.module.css
+++ b/FrontEnd/termi-project/src/pages/Register/RegisterPage.module.css
@@ -31,10 +31,14 @@ margin: 10px auto;
 
 
 
+.form-select.is-invalid {
+  border-color: #dc3545;
+}
 
-
-
-
+.form-select.is-invalid:focus {
+  border-color: #dc3545;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
+}
 
 
 
