--- a/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
@@ -7,17 +7,17 @@
     color:#1A0000;
     padding:15px;
     
-  /*text-align: center;*/
+  text-align: center;
 
 }
 
 .admin-sg{
-    /*background-color: #F8F9D7;*/
+    background-color: #F8F9D7;
     color:#1A0000;
     padding:15px;
     height: 10%;
     margin-right: 10px;
-  /*text-align: center;*/
+  text-align: center;
 
 }
 
