--- a/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
@@ -58,7 +58,7 @@
   font-size: 18px;
   background: #fff;
 
-  /* Center slide text vertically */
+   Center slide text vertically 
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
