--- a/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
@@ -7,11 +7,43 @@
   overflow: hidden;
 }
 
-.suggest-card__title {
-  font-size: 22px;
-  font-weight: 600;
-  margin: 15px 0;
+
+/*.suggest-card__title {*/
+/*  display:inline;*/
+/*  font-size: 22px;*/
+/*  font-weight: 600;*/
+/*  margin: 15px 0;*/
+/*  text-align: center;*/
+/*}*/
+
+.top-suggest-card{
+  /*position: absolute;*/
+}
+
+body[dir="rtl"] .edit-icon{
+    display:inline;
+    margin-right:auto;
+
+}
+
+
+/*.edit-icon{*/
+/*   width:100px;*/
+/*    height:100px;*/
+/*}*/
+body[dir="ltr"] .suggest-card__title{
+    /*margin-right:auto;*/
+    margin-left:auto;
+
+}
+.suggest-card-btn{
+  display:flex;
+  width: 100px;
   text-align: center;
+}
+
+.suggest-card__title{
+  margin-top:5px;
 }
 
 .definition {
@@ -53,22 +85,27 @@
   color: white;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+/*.edit-icon{*/
+/*  display: inline;*/
+/*}*/
 
-   Center slide text vertically 
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
+
+/*.swiper-slide {*/
+/*  text-align: center;*/
+/*  font-size: 18px;*/
+/*  background: #fff;*/
+
+/*   Center slide text vertically */
+/*  display: -webkit-box;*/
+/*  display: -ms-flexbox;*/
+/*  display: -webkit-flex;*/
+/*  display: flex;*/
+/*  -webkit-box-pack: center;*/
+/*  -ms-flex-pack: center;*/
+/*  -webkit-justify-content: center;*/
+/*  justify-content: center;*/
+/*  -webkit-box-align: center;*/
+/*  -ms-flex-align: center;*/
+/*  -webkit-align-items: center;*/
+/*  align-items: center;*/
+/*}*/
