--- a/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
@@ -34,10 +34,12 @@
     margin-left: auto;
     margin-right: auto;
     font-family: monospace;
-
+    background-color: #93dc74;
 
 }
-
+.su-button:focus{
+     background-color: #93dc74;
+}
 
 .oneCard-e{
     border: solid 1px black;
@@ -47,4 +49,22 @@
 .definition__text{
     color:black;
     font-weight:bold;
+}
+
+#style  {
+    background-color: red;
+      transition:0s 1s;
+}
+
+/*#style:focus {     */
+/*    background-color:yellow;    */
+/*}*/
+
+/*#style:visited{*/
+/*    background-color:green;*/
+/*}*/
+#style:active{
+    background:olive;
+      transition:0s;
+
 }
