--- a/FrontEnd/termi-project/src/styles/ProfilePage.css
+++ b/FrontEnd/termi-project/src/styles/ProfilePage.css
@@ -2,3 +2,12 @@
     width:20px;
     height:20px;
 }
+.small-btn {
+    width: 30%;
+    height: 13%;
+    float: left;
+    margin-left:10%;
+}
+.responsive-avatar{
+    margin-left: 40%;
+}
