--- a/FrontEnd/termi-project/src/styles/ProfilePage.css
+++ b/FrontEnd/termi-project/src/styles/ProfilePage.css
@@ -6,7 +6,14 @@
     width: 30%;
     height: 13%;
     float: left;
-    margin-left:10%;
+    margin-left:40%;
+}
+@media only screen and (max-width: 600px) {
+  .small-btn {
+    width: 50px;
+    height: 20px;
+    font-size: 10px;
+  }
 }
 .responsive-avatar{
     margin-left: 40%;
