--- a/FrontEnd/termi-project/src/styles/ProfilePage.css
+++ b/FrontEnd/termi-project/src/styles/ProfilePage.css
@@ -15,6 +15,37 @@
     font-size: 10px;
   }
 }
-.responsive-avatar{
-    margin-left: 40%;
+
+.lab_nextAvatar{
+    font-family: monospace;
+    color: green;
+    font-size: 25px;
+    margin-top: 10px;
+}
+.txt_afterLab{
+    font-family: monospace;
+    color: green;
+    font-size: 16px;
+}
+    
+    .container {
+  display: flex;
+  align-items: center;
+}
+.avatar-container {
+  width: 70%;
+  height: 70%;
+}
+.inputs-container {
+ display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.input-row {
+  display: flex;
+}
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
