Last version of termi project
changes::

REset PAssword path route api
Auth api routes
Forgot password routess
edit term Termcard Admin
much more

--- a/FrontEnd/termi-project/src/App.css
+++ b/FrontEnd/termi-project/src/App.css
@@ -41,3 +41,19 @@
   }
 }
 
+.col-has-all-profile-item{
+  /*margin-left: 10px;*/
+}
+.right-buttons-in-first-col{
+  margin-bottom: 5px;
+  /*width:50%;*/
+  display: block;
+
+
+}
+.rights-button-in-profile{
+}
+.span-in-profile{
+  font-family: monospace;
+  
+}
