--- a/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/Admin.css
@@ -68,3 +68,20 @@
       transition:0s;
 
 }
+.btnadmin{
+/*width: fit-content;*/
+/*text-align: center;*/
+/*margin-left: 112px;*/
+/*margin-right: 112px;*/
+padding:0;
+margin:0;
+width: 100%;
+z-index:0;
+  text-overflow: ellipsis;
+  
+color: #ad60e0;
+font-size: 20px;
+}
+.accordion-header{
+      z-index:0;
+}
