--- a/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
+++ b/FrontEnd/termi-project/src/pages/AdminPage/SuggestCard.css
@@ -5,6 +5,8 @@
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  z-index:0;
+
 }
 
 
@@ -40,6 +42,8 @@ body[dir="ltr"] .suggest-card__title{
   display:flex;
   width: 100px;
   text-align: center;
+  z-index:0;
+
 }
 
 .suggest-card__title{
@@ -73,6 +77,7 @@ body[dir="ltr"] .suggest-card__title{
   cursor: pointer;
   border: none;
   border-radius: 4px;
+  z-index:0;
 }
 
 .btn-success {
