--- a/FrontEnd/termi-project/src/styles/LoginStyle.css
+++ b/FrontEnd/termi-project/src/styles/LoginStyle.css
@@ -1,3 +1,20 @@
-.class-card-login{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.class-card-login {
+  background-color: #ffffff;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 0 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 8px;
+  padding: 40px;
+  margin: 10px 0 50px; /* Change this line */
+}
+
+.banner_login {
+  background-color: #4a90e2;
+  padding: 0px 0; /* Decrease the top and bottom padding */
+  color: #fff;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  padding-top: 50px; /* Add extra padding to the top */
+  padding-bottom: 50px; /* Add extra padding to the bottom */
 }
