--- a/FrontEnd/termi-project/src/components/GameCard/GameCard.css
+++ b/FrontEnd/termi-project/src/components/GameCard/GameCard.css
@@ -2,8 +2,8 @@
     position: relative;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 30%;
     border-radius: 5px;
+    /*width: 33%;*/
     cursor: pointer;
 }
 
@@ -22,12 +22,75 @@ img {
   border-radius: 5px 5px 0 0;
 }
 
+.instructions-popup-overlay{
+    background-color: rgba(0, 0, 0, 0.45);
+    padding: 10px;
+}
+
+.instructions-popup-content{
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    -webkit-animation: anvil 0.2s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
+}
+
+.instructions-popup-background > .instructions-popup-title{
+    font-size: 25px;
+    border-bottom: 1px solid gray;
+    text-align: center;
+    padding: 25px 5px;
+}
+
+.instructions-popup-background > .instructions-popup-text{
+    margin: 20px 40px;
+    padding: 10px 5px;
+}
+
+.instructions-popup-background > .instructions-popup-text li{
+    margin: 15px 0px;
+}
+
+.instructions-popup-background > .instructions-popup-actions{
+    margin: 10px;
+}
+
+@keyframes anvil {
+    0% {
+        transform: scale(1) translateY(0px);
+        opacity: 0;
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+    }
+    1% {
+        transform: scale(0.96) translateY(10px);
+        opacity: 0;
+        box-shadow: 0 0 0 rgba(241, 241, 241, 0);
+    }
+    100% {
+        transform: scale(1) translateY(0px);
+        opacity: 1;
+        box-shadow: 0 0 500px rgba(241, 241, 241, 0);
+        }
+}
+
 @media only screen and (max-width: 960px) {
     .game-card {
-        width: 40%;
+        /*width: 40%;*/
     }
     .game-instructions-button{
         top: 5px;
         right: 5px;
+    }
+    
+    .instructions-popup-background > .instructions-popup-title{
+        padding: 15px 5px;
+    }
+    
+    .instructions-popup-background > .instructions-popup-text{
+        margin: 15px 5px 15px 20px;
+        padding: 5px 5px;
+    }
+    
+    .instructions-popup-background > .instructions-popup-text li{
+        margin: 10px 0px;
     }
 }
