Added menu in memory game, sound animation. remove menu when click play. leaderboards click adn more

--- a/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
+++ b/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
@@ -77,3 +77,19 @@
 .icon-center{
   margin-left:25%
 }
+
+.title {
+    animation: title-animation 2s ease-in-out infinite;
+}
+
+@keyframes title-animation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
