--- a/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
+++ b/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
@@ -3,16 +3,30 @@
     display: grid;
     align-items: center;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .memory-card{
+    background-color: transparent;
+    width: 200px;
+    height: 300px;
+    perspective: 1000px;
+    
     border-radius: .25rem;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
-    background-color: white;
+    /*background-color: white;*/
     transform-style: preserve-3d;
     transition: 150ms;
-    cursor: pointer;
+    /*cursor: pointer;*/
+}
+
+.memory-card-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
 }
 
 .disabled-memory-card{
@@ -21,27 +35,43 @@
 
 .memory-card .back,
 .memory-card .front{
+    border-radius: .25rem;
     width: 100%;
     height: 100%;
     padding: 12px;
 }
 
 .memory-card .back{
-    background-color: gray;
     color: transparent;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
     backface-visibility: hidden;
+    
+    transform-style: preserve-3d;
+    transition: 150ms;
+    cursor: pointer;
 }
 
 .memory-card .front{
-    border-radius: .25rem;
+    pointer-events:none;
 }
 
 .memory-card:hover{
     transform: translateY(-2px);
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
+}
+
+.short-definition-type{
+    background: #5b3e8f;
+    background: -webkit-linear-gradient(200deg, #5b3e8f 0%, #140056 100%);
+    background: linear-gradient(200deg, #5b3e8f 0%, #140056 100%);
+}
+
+.concept-name-type{
+    background: #ffbb29;
+    background: -webkit-linear-gradient(200deg, #ffbb29 0%, #cd5703 100%);
+    background: linear-gradient(200deg, #ffbb29 0%, #cd5703 100%);
 }
 
 .score-box{
@@ -68,28 +98,13 @@
 }
 
 .correct{
-    background-color: #55cc3b;
+    background-color: #55cc3b !important;
 }
 
 .incorrect{
-    background-color: red;
+    background-color: red !important;
 }
+
 .icon-center{
   margin-left:25%
-}
-
-.title {
-    animation: title-animation 2s ease-in-out infinite;
-}
-
-@keyframes title-animation {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.2);
-    }
-    100% {
-        transform: scale(1);
-    }
 }
