--- a/FrontEnd/termi-project/src/components/GameCard/GameCard.css
+++ b/FrontEnd/termi-project/src/components/GameCard/GameCard.css
@@ -3,7 +3,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    /*width: 33%;*/
+    width: 33%;
     cursor: pointer;
 }
 
@@ -74,7 +74,7 @@ img {
 
 @media only screen and (max-width: 960px) {
     .game-card {
-        /*width: 40%;*/
+        width: 40%;
     }
     .game-instructions-button{
         top: 5px;
