--- a/FrontEnd/termi-project/src/components/TermCard/TermCard.css
+++ b/FrontEnd/termi-project/src/components/TermCard/TermCard.css
@@ -12,6 +12,16 @@
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 100, 0.3);
 }
 
+.term-card-trending{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index:-10;
+    clip-path: polygon(0% 0%, 20.6% 0%, 100.4% 24.5%, 100.4% 32.5%);
+    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+}
+
 .language-selector{
     display: flex;
     justify-content: space-around;
