--- a/FrontEnd/termi-project/src/games/wordle/wordle.css
+++ b/FrontEnd/termi-project/src/games/wordle/wordle.css
@@ -47,9 +47,9 @@ button:focus {
   outline: none;
 }
 
-button svg {
-  margin-right: 5px;
-}
+/*button svg {*/
+/*  margin-right: 5px;*/
+/*}*/
 
 .Wordle {
   text-align: center;
