--- a/FrontEnd/termi-project/src/components/Leaderboard/Leaderboard.css
+++ b/FrontEnd/termi-project/src/components/Leaderboard/Leaderboard.css
@@ -1,19 +1,71 @@
 .backboard{
-    padding: 0px 20px 20px 20px;
+    /*padding: 0px 20px 20px 20px;*/
+}
+
+.leaderboard-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
 }
 
 .leaderboard {
     display: flex;
     flex-direction: column;
-    gap: 32px;
-    overflow-y:auto;
+    padding: 0px 15px 0px 0px;
+    max-height:40vh;
+    overflow:auto;
+    overflow-x:hidden;
+}
+
+.user-info{
+    max-width: auto;
+}
+
+.user-rank-container {
+    display: flex;
+    border-radius: 10px;
+    background: rgb(8,8,113);
+    background: -moz-radial-gradient(circle, rgba(8,8,113,1) 0%, rgba(2,0,36,1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(8,8,113,1) 0%, rgba(2,0,36,1) 100%);
+    color: white;
+    padding: 15px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px 10px 10px 10px;
+}
+
+.rank-img{
+    width: 60px;
+}
+
+.rank-img-display{
+    width: 100px;
 }
 
 .leaderboard .user-profile{
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
     gap: 10px;
 }
+
+@media only screen and (max-width: 576px) {
+    .rank-img{
+        width: 8vw;
+    }
+    
+    .rank-img-display{
+        width: 15vw;
+    }
+    .user-rank-container{
+        padding: 5px;
+        margin: 15px 0px 0px 0px;
+    }
+    .backboard{
+        padding: 0px;
+    }
+}
+
 
 /*.leaderboard .user-profile:first-child .user-rank{*/
 /*    color: gold;*/
