--- a/FrontEnd/termi-project/src/games/backward-definition/BackDefinition.css
+++ b/FrontEnd/termi-project/src/games/backward-definition/BackDefinition.css
@@ -62,3 +62,9 @@ h1 {
 .icon-center{
   margin-left:25%
 }
+
+.question-background{
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 15px 30px;
+  border-radius: 10px;
+}
