--- a/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
+++ b/FrontEnd/termi-project/src/games/memory-game/MemoryGame.css
@@ -1,15 +1,18 @@
 .memory-cards-grid{
     margin: 10px;
     display: grid;
-    align-items: center;
+    align-items: stretch;
+    justify-content: stretch;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: 1fr;
     gap: 2rem;
 }
 
 .memory-card{
     background-color: transparent;
-    width: 200px;
-    height: 300px;
+    width: 100%;
+    /*width: 200px;*/
+    /*height: 300px;*/
     perspective: 1000px;
     
     border-radius: .25rem;
@@ -27,6 +30,9 @@
     text-align: center;
     transition: transform 0.5s;
     transform-style: preserve-3d;
+    /*background-color: white;*/
+    
+    border-radius: .25rem;
 }
 
 .disabled-memory-card{
@@ -45,6 +51,7 @@
     color: transparent;
     -webkit-user-select: none;
     -ms-user-select: none;
+    -moz-user-select: none;
     user-select: none;
     backface-visibility: hidden;
     
@@ -55,6 +62,8 @@
 
 .memory-card .front{
     pointer-events:none;
+    background-color: white;
+    
 }
 
 .memory-card:hover{
@@ -63,7 +72,7 @@
 }
 
 .short-definition-type{
-    background: #5b3e8f;
+    /*background: #5b3e8f;*/
     background: -webkit-linear-gradient(200deg, #5b3e8f 0%, #140056 100%);
     background: linear-gradient(200deg, #5b3e8f 0%, #140056 100%);
 }
@@ -72,29 +81,6 @@
     background: #ffbb29;
     background: -webkit-linear-gradient(200deg, #ffbb29 0%, #cd5703 100%);
     background: linear-gradient(200deg, #ffbb29 0%, #cd5703 100%);
-}
-
-.score-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 4px solid gray;
-    margin: 25px 5px 5px 5px;
-    padding: 5px;
-    text-align: center;
-    border-radius: 18px;
-    background: linear-gradient(225deg, #f2f2f2, #ffffff);
-    box-shadow:  -5px 5px 5px #c2c2c2,
-                 5px -5px 5px #ffffff;
-}
-
-.icon-button{
-    font-size: 5em;
-    cursor: pointer;
-}
-
-.icon-button:hover{
-    color: green;
 }
 
 .correct{
