--- a/FrontEnd/termi-project/src/pages/ProfilePage/ProfilePage.css
+++ b/FrontEnd/termi-project/src/pages/ProfilePage/ProfilePage.css
@@ -1,8 +1,3 @@
-.chevron{
-    width:20px;
-    height:20px;
-}
-
 .profile-menu{
   padding: 0px 0px 20px 0px;
 }
@@ -57,7 +52,7 @@
 }
 
 .favorites-button {
-  margin: 10px;
+  /*margin: 10px;*/
   padding: 15px 30px;
   transition: 0.5s;
   background-size: 200% auto;
