--- a/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
+++ b/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
@@ -1,7 +1,8 @@
 .points span {
-    color : black;
+  font-size: 1.5rem;
+    color : white;
     font-weight: bold;
-     margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 .score-box span {
     color : black;
@@ -16,15 +17,21 @@
   justify-content: flex-start;
 }
 .hangman-img {
+  
   width: 30%;
   height: 30%;
   items-align: center;
   display: flex;
+  border-radius: 10px;
+  box-sizing: border-box;
+
 }
 .left-text {
-  width: 300px;
+  color: rgb(0, 255, 127);
+  
+  font-size: 1.5rem;
   text-align: center;
-  font-weight: bold;
+  
   display: flex;
 }
 
@@ -43,11 +50,11 @@
   text-align: center;
   height: 10rem;
   width:4.5rem; 
-  color: rgb(255, 255, 255);
+  
 }
 .wrong {
   animation: letter-wrong 0.5s;
-  background-color: red;
+  background-color: rgb(227, 30, 36);
   color: white;
 }
 
@@ -66,10 +73,9 @@
 
 
 .letter {
-    background-color: rgb(0, 169, 130);  
-  width: 100px;
-  height: 100px;
-  font-size: 1.5rem;
+  background-color: rgb(255, 255, 255);  
+
+  font-size: 1.6rem;
   text-align: center;
   font-weight: bold;
   display: flex;
@@ -94,7 +100,7 @@
 .blankSquare, .letter {
   width: 33px;
   height: 40px;
-  border: 3px solid rgb(0, 0, 0);
+  border: 3px solid rgb(255, 255, 255);
   border-radius: 7px;
   color: rgb(0, 0, 0);
   text-align: center;
@@ -155,17 +161,19 @@
 }
 
 .letters-table .letter-opt:hover {
+  
   background-color: rgb(255, 255, 255);
 }
 
 .letters-table .letter-opt.guessed {
   opacity: 0.9;
-  color: white;
+  
   pointer-events: none;
 }
 
 
 .letters-container {
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -174,6 +182,7 @@
 }
 
 .correct-guess {
+  
   animation-name: correct-guess-animation;
   animation-duration: 2s;
 }
@@ -202,6 +211,9 @@
  
 }
 
+
+
+
 @keyframes wrong-guess-animation {
   0% {
     transform: translateX(0);
@@ -223,7 +235,7 @@
 
 
 .letters-table .letter-opt.correct-guess {
-    background-color: rgb(0, 169, 130);
+    background-color: rgb(0, 255, 127);
 }
 
 .icon-selector-container {
