--- a/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
+++ b/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
@@ -1,6 +1,6 @@
 .points span {
   font-size: 1.5rem;
-    color : white;
+    color : rgb(255, 215, 0);
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -100,7 +100,7 @@
 .blankSquare, .letter {
   width: 33px;
   height: 40px;
-  border: 3px solid rgb(255, 255, 255);
+  border: 3px solid rgb(255, 215, 0);
   border-radius: 7px;
   color: rgb(0, 0, 0);
   text-align: center;
