--- a/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
+++ b/FrontEnd/termi-project/src/games/hangman-game/HangmanGame.css
@@ -34,7 +34,7 @@
   margin-top: 120px;
   font-size: 0.8rem;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
   height: 10rem;
   width:4.5rem; 
   color: rgb(255, 255, 255);
